plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

sourceCompatibility = 15
mainClassName = 'bg.tuvarna.traveltickets.App'

group 'bg.tuvarna'
version '1.0-SNAPSHOT'

ext {
    hibernateVersion = '5.4.21'
    postgrsDriverVersion = '42.2.16'
    junitVersion = '4.12'
    log4jVersion = '2.13.3'
    jbcryptVersion = '0.4'
}

repositories {
    mavenCentral()
}

dependencies {
    // Database
    implementation "org.hibernate:hibernate-core:${hibernateVersion}.Final"
    implementation "org.postgresql:postgresql:${postgrsDriverVersion}"

    // Logging
    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"

    // Other
    implementation "org.mindrot:jbcrypt:${jbcryptVersion}"

    // Testing
    testImplementation group: 'junit', name: 'junit', version: "${junitVersion}"
}

javafx {
    version = '15'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}
